testing/platform-service/results/opa-with-resources.yaml
---
# Source: platform-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release
  labels:
    app.kubernetes.io/name: test
    helm.sh/chart: platform-service-1.1.0
    app.kubernetes.io/instance: test-release
    app.kubernetes.io/managed-by: Helm
    app: test
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test
      app.kubernetes.io/instance: test-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test
        app.kubernetes.io/instance: test-release
        app: test
        version: v1
        sidecar.opa-istio.io/inject: "true"
        session-management: backend
      annotations:
    spec:
      serviceAccountName: test
      containers:

        - name: opa-istio
          image: openpolicyagent/opa:0.28.0-istio
          imagePullPolicy: IfNotPresent          
          args:
          - run
          - --server
          - --addr=localhost:8181
          - --diagnostic-addr=0.0.0.0:8282
          - --config-file=/config/config.yaml
          - /policy/policy.rego
          volumeMounts:
          - mountPath: /config
            name: opa-istio-config
          - mountPath: /policy
            name: opa-policy

          livenessProbe:
            exec:
              command:
              - "/app/opa_envoy_linux_amd64"
              - "eval"
              - "1"
          readinessProbe:
            exec:
              command:
              - "/app/opa_envoy_linux_amd64"
              - "eval"
              - "1"


          resources:
            limits:
              cpu: 300m
              memory: 250Mi
            requests:
              cpu: 200m
              memory: 250Mi
      


      
        - name: test
          image: "test.io/some/repository:latest"
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            successThreshold: 3
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health/startup
              port: 80
            periodSeconds: 10
          volumeMounts:
            - name: service-secrets
              mountPath: /secrets

          resources:
            {}
      volumes:
      
      - name: opa-istio-config
        configMap: 
          name: opa-istio-config
      - name: opa-policy
        configMap: 
          name: opa-policy

      - name: service-secrets
        secret:
          secretName: test-secrets
