testing/platform-service/results/vs-exact-matches.yaml
---
# Source: platform-service/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test
spec:
  hosts:
  - test.test-ns.svc.cluster.local
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: "test.test-ns.svc.cluster.local"
---
# Source: platform-service/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-external
spec:
  hosts:
  - "mysubdomain1.mydomain.com"
  - "mysubdomain2.mydomain.com"
  gateways:
  - gateway/one-gateway
  http:
  - match:
    - uri:
        exact: /url2
    - uri:
        prefix: /url2/
  # routes to service
    route:
    - destination:
        host: "test.test-ns.svc.cluster.local"
  # redirect on prefixes without trailing slashes
  - match:
    - uri:
        exact: /prefix1
    redirect:
      uri: /prefix1/
  - match:
    - uri:
        exact: /prefix2
    redirect:
      uri: /prefix2/
  # routes to service
  - route:
    - destination:
        host: "test.test-ns.svc.cluster.local"
    match:
    - uri:
        prefix: /prefix1/
    - uri:
        prefix: /prefix2/
    rewrite:
      uri: /
    # deprecated
    headers:
      request:
        add:
          x-appname: prefix1
